# crawldesktopshell

./: CHANGELOG.md  flake.nix
archive/: BTSvc.qml  BrigtSv.c.qml  NetSvc.qml  Theme-bak.qml  ThemeService.qml
core/: Cargo.toml
core/assets/: Icon.txt
core/assets/archive/: models.rs
core/assets/config/: config.toml
core/assets/permissions/: 90-crawl-backlight.rules
core/assets/systemd/: crawl-sysd.service
core/crates/crawl-cli/: Cargo.toml
core/crates/crawl-cli/src/: main.rs  output.rs
core/crates/crawl-cli/src/cmd/: audio.rs  bluetooth.rs  brightness.rs  daemon.rs  health.rs  mod.rs  network.rs  proc.rs  shell.rs  status.rs  sysinfo.rs  sysmon.rs  theme.rs
core/crates/crawl-ipc/: Cargo.toml
core/crates/crawl-ipc/src/: client.rs  commands.rs  error.rs  events.rs  lib.rs  protocol.rs  router.rs  server.rs  socket.rs  subscription.rs  types.rs
core/crates/crawl-mail/: Cargo.toml
core/crates/crawl-mail/src/: accounts.rs  config.rs  error.rs  ipc.rs  lib.rs  main.rs  notify.rs  parser.rs  smtp.rs
core/crates/crawl-mail/src/imap/: idle.rs  mod.rs  session.rs  sync.rs
core/crates/crawl-mail/src/store/: accounts.rs  folders.rs  messages.rs  mod.rs  outbox.rs  schema.sql
core/crates/crawl-sysd/: Cargo.toml
core/crates/crawl-sysd/src/: audio.rs  bluetooth.rs  brightness.rs  config.rs  daemon.rs  idle.rs  main.rs  notification.rs  proc.rs  scheduler.rs  state.rs  sysmon.rs
core/crates/crawl-sysd/src/clipboard/: mod.rs  schema.sql
core/crates/crawl-sysd/src/network/: dbus.rs  ethernet.rs  hotspot.rs  mod.rs  state.rs  sysfs.rs  util.rs  wifi.rs
core/crates/crawl-sysd/src/services/: audio.rs  bluetooth.rs  brightness.rs  clipboard.rs  daemon.rs  diagnostics.rs  idle.rs  mod.rs  models.rs  network.rs  notification.rs  proc.rs  sysmon.rs  theme.rs
core/crates/crawl-sysd/src/sysinfo/: hardware.rs  mod.rs  models.rs  service.rs  session.rs
core/crates/crawl-theme/: Cargo.toml
core/crates/crawl-theme/src/: color.rs  config.rs  contrast.rs  error.rs  ipc.rs  lib.rs  palette.rs
core/crates/crawl-theme/src/apply/: colors_json.rs  cursor.rs  gtk.rs  mod.rs  niri.rs  qt.rs  terminal.rs
core/crates/crawl-theme/src/dynamic/: extract.rs  generate.rs  mod.rs  scheme.rs  scheme_type.rs  tones.rs
core/crates/crawl-theme/src/dynamic/hct/: hct.rs
core/crates/crawl-theme/src/dynamic/quantizer/: kmeans.rs  mod.rs  strategies.rs  wsmeans.rs
core/crates/crawl-theme/src/variants/: custom.rs  dark.rs  light.rs  mod.rs
core/crates/crawl-webservice/: Cargo.toml
core/crates/crawl-webservice/src/: config.rs  ipc.rs  main.rs
core/crates/crawl-webservice/src/rss/: fetcher.rs  mod.rs  opml.rs  schema.sql  store.rs
core/crates/crawl-webservice/src/wallhaven/: client.rs  downloader.rs  mod.rs
core/docs/: CLI.md  CLIPBOARD.md  MAIL.md  THEME.md  WEBSERVICE.md
nix/: hm-module.nix
quickshell/: README.md  shell.qml
quickshell/Assets/: settings-default.json  settings-search-index.json
quickshell/Assets/Templates/: crawlds.json
quickshell/Common/: IconsTabler.qml  Settings.qml  ShellState.qml  Style.qml  Theme.qml  Time.qml
quickshell/Modules/Background/: Background.qml  FadeOverlay.qml  Overview.qml
quickshell/Modules/Bar/: Bar.qml
quickshell/Modules/Cards/: AudioCard.qml  BluetoothCard.qml  BrightnessCard.qml  CalendarHeaderCard.qml  CalendarMonthCard.qml  MediaCard.qml  NetworkCard.qml  NotificationsCard.qml  ProfileCard.qml  ShortcutsCard.qml  SystemMonitorCard.qml  WeatherCard.qml
quickshell/Modules/DesktopWidgets/: DesktopWidgets.qml  DraggableDesktopWidget.qml
quickshell/Modules/Dock/: Dock.qml  DockContent.qml  DockMenu.qml
quickshell/Modules/LockScreen/: LockContext.qml  LockScreen.qml  LockScreenBackground.qml  LockScreenHeader.qml  LockScreenPanel.qml
quickshell/Modules/Mail/: AccountList.qml  AttachmentList.qml  ComposeMessage.qml  FolderList.qml  Mail.qml  MailPanel.qml  MailPanelWindow.qml  MessageItem.qml  MessageList.qml  MessageView.qml  SearchBar.qml
quickshell/Modules/MainScreen/: AllScreens.qml  BarContentWindow.qml  BarExclusionZone.qml  BarTriggerZone.qml  MainScreen.qml  PopupMenuWindow.qml  ScreenCorners.qml  SmartPanel.qml
quickshell/Modules/Notification/: Notification.qml
quickshell/Modules/OSD/: OSD.qml
quickshell/Services/: AppThemeService.qml  AudioService.qml  BarService.qml  BarWidgetRegistry.qml  BatteryService.qml  BluetoothRssi.qml  BluetoothService.qml  BrightnessService.qml  CalendarService.qml  CavaService.qml  ClipboardService.qml  CompositorService.qml  ControlCenterWidgetRegistry.qml  CrawlService.qml  CurrentScreenDetector.qml  CustomButtonIPCService.qml  DarkModeService.qml  DesktopWidgetRegistry.qml  EvolutionDataServer.qml  HyprlandService.qml  IPCService.qml  ImageCacheService.qml  KeyboardLayoutService.qml  Khal.qml  LauncherProviderRegistry.qml  LocationService.qml  MailService.qml  MangoService.qml  NetworkService.qml  NightLightService.qml  NiriService.qml  NotificationService.qml  PanelService.qml  PowerProfileService.qml  ProgramCheckerService.qml  RssService.qml  SettingsPanelService.qml  SwayService.qml  SystemStatService.qml  TemplateProcessor.qml  (+5 more)
quickshell/Widgets/: CrawlBattery.qml  CrawlBox.qml  CrawlBusyIndicator.qml  CrawlButton.qml  CrawlCheckbox.qml  CrawlCircleStat.qml  CrawlClock.qml  CrawlCollapsible.qml  CrawlColorChoice.qml  CrawlColorPicker.qml  CrawlColorPickerDialog.qml  CrawlColorSlider.qml  CrawlComboBox.qml  CrawlContextMenu.qml  CrawlDateTimeTokens.qml  CrawlDivider.qml  CrawlDropShadow.qml  CrawlFilePicker.qml  CrawlGraph.qml  CrawlGridView.qml  CrawlHeader.qml  CrawlIcon.qml  CrawlIconButton.qml  CrawlIconButtonHot.qml  CrawlIconPicker.qml  CrawlImageRounded.qml  CrawlInputAction.qml  CrawlKeybindRecorder.qml  CrawlLabel.qml  CrawlLinearGauge.qml  CrawlLinearSpectrum.qml  CrawlListView.qml  CrawlMirroredSpectrum.qml  CrawlPopupContextMenu.qml  CrawlRadioButton.qml  CrawlReorderCheckboxes.qml  CrawlScrollText.qml  CrawlScrollView.qml  CrawlSearchableComboBox.qml  CrawlSectionEditor.qml  (+14 more)
quickshell/nix/: home-module.nix  nixos-module.nix  package.nix
(+217 files in other folders)
