[workspace]
members = [
    "crates/crawl-sysd",
    "crates/crawl-cli",
    "crates/crawl-ipc",
    "crates/crawl-theme",
    "crates/crawl-mail",
    "crates/crawl-webservice",
]
resolver = "3"

[workspace.dependencies]
# Internal crates
crawl-ipc = { path = "crates/crawl-ipc" }
crawl-theme = { path = "crates/crawl-theme" }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
thiserror = "1"

# Async
async-trait = "0.1"

# Config
figment = { version = "0.10", features = ["env", "toml"] }

# Display
libc = "0.2"

# Futures
futures = "0.3"
futures-util = "0.3"

# systemd integration
libsystemd = "0.7"

# CLI
clap = { version = "4", features = ["derive"] }
color-eyre = "0.6"
once_cell = "1"
term_size = "0.3"
comfy-table = "7"
owo-colors = "4"

[workspace.package]
version = "0.0.1"
edition = "2024"
rust-version = "1.94.0"
authors = ["Enosh"]
license = "MIT"
repository = "https://codeberg.org/me-osano/crawl"
