[package]
name = "crawl-cli"
description = "Crawl CLI client — talk to crawl-daemon over Unix socket"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "crawl"
path = "src/main.rs"

[dependencies]
crawl-ipc    = { workspace = true }
crawl-theme  = { workspace = true }
tokio      = { workspace = true }
clap       = { workspace = true }
serde_json = { workspace = true }
anyhow     = { workspace = true }
color-eyre = { workspace = true }
tracing    = { workspace = true }
tracing-subscriber = { workspace = true }
owo-colors  = { workspace = true }
once_cell   = { workspace = true }
term_size   = { workspace = true }
comfy-table = { workspace = true }
image       = "0.25"
