[package]
name = "crawl-mail"
description = "Crawl mail handler — "
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
crawl-ipc        = { workspace = true }
# Async runtime
tokio          = { version = "1",  features = ["full"] }
tokio-util     = { version = "0.7", features = ["codec", "compat"] }   # framing + tokio↔futures bridge
tokio-stream   = "0.1"             # async stream utilities

# IMAP
async-imap     = "0.9"          # async IMAP client
async-native-tls = "0.5"        # TLS for IMAP/SMTP
async-std      = { version = "1", features = ["std", "unstable"] }  # runtime for async-imap

# SMTP
lettre         = { version = "0.11", features = ["tokio1-native-tls"] }

# Email parsing
mail-parser    = "0.9"          # RFC 5322 + MIME

# Database
sqlx           = { version = "0.7", features = ["sqlite", "runtime-tokio", "macros"] }

# Serialisation (IPC protocol)
serde          = { version = "1", features = ["derive"] }
serde_json     = "1"

# Config file
toml           = "0.8"

# Error handling
thiserror      = "1"
anyhow         = "1"

# Logging
tracing        = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Desktop notifications
zbus           = "4"            # D-Bus (for org.freedesktop.Notifications)

# Utilities
uuid           = { version = "1", features = ["v4"] }
chrono         = { version = "0.4", features = ["serde"] }
base64         = "0.22"
bytes          = "1"